# card

./: .env.example  .gitignore  README.md  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
docgen/: asgi.py  settings.py  urls.py  wsgi.py
generator/: admin.py  ai_service.py  emails.py  forms.py  models.py  serializers.py  urls.py  views.py
generator/management/commands/: _seed_animated_weddings.py  _seed_canva_categories.py  _seed_canva_inspired.py  _seed_distinct_all.py  _seed_extra.py  _seed_extra2.py  _seed_premium.py  _seed_resumes_pro.py  _seed_ultra_premium.py  _seed_weddings_religious.py  populate_seo.py  seed_if_empty.py  seed_templates.py
generator/migrations/: 0001_initial.py  0002_alter_template_category.py  0003_alter_template_category.py  0004_generateddocument_is_public_and_more.py  0005_alter_template_category_alter_template_title.py  0006_brandkit.py  0007_subscription_ai_call_count_and_more.py  0008_template_color_tags_template_download_count_and_more.py  0009_alter_subscription_plan.py  0010_userprofile.py
static/: manifest.json
templates/: 404.html  500.html  ai_template.html  all_templates.html  analytics.html  base.html  brand_kit.html  bulk_export.html  category.html  checkout.html  checkout_success.html  compare_templates.html  documents.html  editor.html  home.html  share.html
templates/auth/: login.html  profile.html  signup.html
templates/pages/: about.html  compare.html  contact.html  faq.html  features.html  pricing.html
templates/partials/: _tpl_badges.html
